--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Digitalt',Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
